# grimoirelab

./: .env  .gitignore  .gitmodules  .travis.yml  README.md  Vagrantfile  _functions.sh  _installers.sh  all-in-one.sh  cleanup.sh  docker-compose.latest.yml  docker-compose.stable.yml  docker-compose.yml  docker-compose_deploy.sh  elasticsearch_values.yaml  grimoirelab-script.tpl  kubernetes_deploy.sh  main.tf  outputs.tf  postinstall.sh  redis_values.yaml  tasks.json  tox.ini  variables.tf
bestiary/: Dockerfile
conf/: elasticsearch.yml  git.json  menu.yaml  projects_chaoss.json  projects_openstack.json  setup.cfg  setup_arthurd.ini  setup_mordred.ini
docs/src/: deployment.rst
kingarthur/: Dockerfile  Dockerfile.latest
mariadb-init/: sortinghat.sql
sirmordred/: Dockerfile  Dockerfile.latest
sortinghat/: Dockerfile  Dockerfile.latest
