[general]
short_name = Grimoire
update = true
debug = true
logs_dir = /var/log
# number of items per bulk request to Elasticsearch
bulk_size = 5000
# number of items to get from Elasticsearch when scrolling
scroll_size = 1000

[projects]
projects_file = /sirmordred/conf/projects.json

[es_collection]
url = http://elasticsearch:9200
arthur_url = http://arthurd:8080
redis_url = redis://redis/8

[es_enrichment]
url = http://elasticsearch:9200

[phases]
collection = true
identities = true
enrichment = true
panels = true

[git]
raw_index = git_test-raw
enriched_index = git_test
